reworked metric system, improved itemstack recognition, small refactors, removed deprecated code